k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eve
  namespace: eve
spec:
  ingressClassName: nginx
  rules:
    - host: eve.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eve-app
                port:
                  number: 80
